# rust-backend-starter

./: .dockerbuildignore  .dockerignore  .env.example  .env.production  .env.test  .gitignore  API_EXAMPLES.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCKER_ANALYSIS_REPORT.md  Dockerfile  Dockerfile.optimized  IMPLEMENTATION_SUMMARY.md  Makefile  OPTIMIZATION_REPORT.md  QUICK_START_OPTIMIZATION.md  README.md  docker-compose.optimized.yml  docker-compose.yml  postman_collection.json
.github/: copilot-instructions.md
migrations/: 20240101000001_create_users_table.sql  20240101000002_create_items_table.sql  20240101000003_add_performance_indexes.sql
scripts/: backup-db.sh  docker-cleanup.sh
src/: config.rs  db.rs  error.rs  main.rs  routes.rs
src/handlers/: auth.rs  health.rs  items.rs  mod.rs
src/middleware/: auth.rs
src/models/: item.rs  user.rs
src/utils/: auth.rs
